# life

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.3018973D7E5DAE0B.idx
src/: main.cpp
